--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   intl: ^0.19.0
   flutter_dotenv: ^5.1.0
   http: ^1.2.2
+  mobile_scanner: ^3.5.7
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
