--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,12 @@ dependencies:
   cupertino_icons: ^1.0.6
   supabase_flutter: ^2.5.7
   geolocator: ^12.0.0
-  google_maps_flutter: ^2.9.0
-  geocoding: ^2.1.1
-  intl: ^0.19.0
   flutter_dotenv: ^5.1.0
+  intl: ^0.19.0
   http: ^1.2.2
-  mobile_scanner: ^3.5.7
-  path_provider: ^2.1.3
+  mobile_scanner: ^3.0.0
+  flutter_map: ^7.0.1
+  latlong2: ^0.9.0
 
 dev_dependencies:
   flutter_test:
